fix: overflow

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ img {
     height: calc(100vh - 100px);
     width: 100vw;
     background-color: #000000;
+    overflow: auto;
 }
 
 .card {
@@ -62,6 +63,7 @@ img {
     background-color: #222222;
     justify-content: space-between;
     padding: 0 1rem;
+    z-index: 1;
 }
 
 .iContainer {
